--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1>Thanks for subscribing!</h1>
     <p>A confirmation email has been sent to <b class="user-email"></b>
       Please open it and click the button inside to confirm your subscription.</p>
-    <button type="button">Dismiss message</button>
+    <button type="button" class="dismiss-btn">Dismiss message</button>
   </div>
   <script src="./script.js"></script>
 
